[project]
name = "rrt-lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "datasets>=4.0.0",
    "flash-attn>=2.8.2",
    "safetensors>=0.5.3",
    "torch>=2.7.1",
    "transformers>=4.54.1",
    "wandb>=0.21.0",
]
